--- a/site/frontend/index.html
+++ b/site/frontend/index.html
@@ -20,7 +20,7 @@
             color: #ffffff;
         }
 
-        #grafico {
+        #graph {
             background-color: #1e1e1e;
             padding: 20px;
             border-radius: 16px;
@@ -67,31 +67,34 @@
 
     <label for="mes">Selecione o mês:</label>
     <select id="mes" onchange="LoadData()">
-        <option value="1">January</option>
-        <option value="2">February</option>
-        <option value="3">March</option>
-        <option value="4">April</option>
-        <option value="5">May</option>
-        <option value="6">June</option>
-        <option value="7">July</option>
-        <option value="8">August</option>
-        <option value="9">September</option>
-        <option value="10">October</option>
-        <option value="11">November</option>
-        <option value="12">December</option>
+        <option id="January"    value="1">January</option>
+        <option id="February" value="2">February</option>
+        <option id="March" value="3">March</option>
+        <option id="April" value="4">April</option>
+        <option id="May" value="5">May</option>
+        <option id="June" value="6">June</option>
+        <option id="July" value="7">July</option>
+        <option id="August" value="8">August</option>
+        <option id="September" value="9">September</option>
+        <option id="October" value="10">October</option>
+        <option id="November" value="11">November</option>
+        <option id="December" value="12">December</option>
     </select>
 
-    <canvas id="grafico" height="600", width="1500"></canvas>
+    <canvas id="graph" height="600", width="1500"></canvas>
 
     <div id="stats" style="margin-top: 20px; font-family: Arial; font-size: 16px;">
-        <p><strong>Dia com mais uso:</strong> <span id="DaymoreUse"></span></p>
-        <p><strong>Dia com menos uso:</strong> <span id="DayLessUse"></span></p>
-        <p><strong>Total do mês:</strong> <span id="MonthTotal"></span> min</p>
-        <p><strong>Média por dia:</strong> <span id="DayAverage"></span> min</p>
+        <p><strong>Day with Highest Usage:</strong> <span id="DaymoreUse"></span></p>
+        <p><strong>Day with Lowest Usage:</strong> <span id="DayLessUse"></span></p>
+        <p><strong>Monthly Total:</strong> <span id="MonthTotal"></span> min</p>
+        <p><strong>Monthly Average:</strong> <span id="DayAverage"></span> min</p>
     </div>
     <script>
-        let grafico;
-
+        let graph;
+        const now = new Date();
+        const month = ["January","February","March","April","May","June","July","August","September","October","November","December"];
+        const currentMonth = month[now.getMonth()];
+        document.getElementById(currentMonth).selected = "true";
 
         function MinToHour(Tmin){
             let Time_Hours = Tmin/60
@@ -101,13 +104,13 @@
         }
 
         function CreateChart(labels, dados) {
-            const ctx = document.getElementById('grafico').getContext('2d');
+            const ctx = document.getElementById('graph').getContext('2d');
 
-            if (grafico) {
-                grafico.destroy();
+            if (graph) {
+                graph.destroy();
             }
 
-            grafico = new Chart(ctx, {
+            graph = new Chart(ctx, {
                 type: 'bar',
                 data: {
                     labels: labels,
