--- a/site/frontend/index.html
+++ b/site/frontend/index.html
@@ -84,6 +84,7 @@
     <canvas id="graph" height="600", width="1500"></canvas>
 
     <div id="stats" style="margin-top: 20px; font-family: Arial; font-size: 16px;">
+        <p><strong>Current day:</strong> <span id="currentDay"></span></p>
         <p><strong>Day with Highest Usage:</strong> <span id="DaymoreUse"></span></p>
         <p><strong>Day with Lowest Usage:</strong> <span id="DayLessUse"></span></p>
         <p><strong>Monthly Total:</strong> <span id="MonthTotal"></span> min</p>
@@ -92,6 +93,7 @@
     <script>
         let graph;
         const now = new Date();
+        const day = now.getDate();
         const month = ["January","February","March","April","May","June","July","August","September","October","November","December"];
         const currentMonth = month[now.getMonth()];
         document.getElementById(currentMonth).selected = "true";
@@ -169,9 +171,14 @@
                         const total = val.reduce((a, b) => a + b, 0);
                         const Average = Math.round(total / val.length);
 
+                        const currentDay = data.find(item => item.dia == day).tempo
                         const DayMoreUse = data.find(item => item.tempo === max).dia;
                         const DayLessUse = data.find(item => item.tempo === min).dia;
 
+                        console.log(currentDay)
+
+
+                        document.getElementById('currentDay').textContent = MinToHour(currentDay)
                         document.getElementById('DaymoreUse').textContent = `Day ${DayMoreUse} (${MinToHour(max)} min)`;
                         document.getElementById('DayLessUse').textContent = `Day ${DayLessUse} (${MinToHour(min)} min)`;
                         document.getElementById('MonthTotal').textContent = MinToHour(total);
